--- a/index.html
+++ b/index.html
@@ -9,24 +9,40 @@
     <link rel="stylesheet" type="text/css" href="main.css" />
     <link href="https://unpkg.com/material-components-web@latest/dist/material-components-web.min.css" rel="stylesheet">
     <script src="https://unpkg.com/material-components-web@latest/dist/material-components-web.min.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
   </head>
   <body>
     <header id="section1_wrapper">
-      <div id="pusha1"></div>
       <div id="section1">
-        <h1>Peter Moung</h1>
-        <h2>Front End Engineer</h2>
-        <button class="mdc-button mdc-button--raised inline-demo-button mdc-ripple-upgraded" style="--mdc-ripple-fg-size:56px; --mdc-ripple-fg-scale:1.97577; --mdc-ripple-fg-translate-start:14.5px, 5px; --mdc-ripple-fg-translate-end:18.9922px, -10px;">
+        <h1 id="h1_name">Peter Moung</h1>
+        <h2 id="h2_role">Front End Engineer</h2>
+        <button id="see_proj_btn" class="mdc-button mdc-button--raised inline-demo-button mdc-ripple-upgraded" style="--mdc-ripple-fg-size:56px; --mdc-ripple-fg-scale:1.97577; --mdc-ripple-fg-translate-start:14.5px, 5px; --mdc-ripple-fg-translate-end:18.9922px, -10px;">
       
             <span class="mdc-button__label"><!----><a id="section1_btn" href="#section4">See Projects</a><!----></span>
           </button>
       </div>
-      <div id="section4">
-        <h1>Projects</h1>
-      </div>
     </header>
-  </body>
+    <div id="section2_wrapper">
+      <div id="section2">
+
+      </div>
+    </div>
+    <div id="section3_wrapper">
+      <div id="section3">
+
+      </div>
+    </div>
+    <div id="section4_wrapper">
+      <div id="section4">
+
+      </div>
+    </div>
+
+
   <footer>
 
+    <script type="text/javascript" src="index.js"></script>
   </footer>
+  </body>
+  
 </html>
