fixed flebox section2 inline

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <body>
     <header id="section1_wrapper">
       <div id="section1">
-        <h1 id="h1_section1">Peter Moung</h1>
+        <h1 id="h1_section1">Peter</h1>
         <h2 id="h2_role">Front End Engineer</h2>
         <button id="see_proj_btn" class="mdc-button mdc-button--raised inline-demo-button mdc-ripple-upgraded" style="--mdc-ripple-fg-size:56px; --mdc-ripple-fg-scale:1.97577; --mdc-ripple-fg-translate-start:14.5px, 5px; --mdc-ripple-fg-translate-end:18.9922px, -10px;">
       
