overide parent class in icon row for better ui

--- a/index.html
+++ b/index.html
@@ -47,6 +47,11 @@
                     
               </div>
       </div>
+      <!-- <div id="icon_mobile" class="flex-container">
+          <img src="javascript.png" />
+          <img src="nodejs.png" />
+          <img src="react.png" />
+      </div>   -->
       
     </div>
     <div id="section3_wrapper">
