bug fixes and base card finished

--- a/index.html
+++ b/index.html
@@ -103,14 +103,29 @@
           <div id="section4">
               <div class="flip-card">
                 <div class="flip-card-inner">
-                  <div class="flip-card-front">
-                    <img src="https://www.w3schools.com/howto/img_avatar.png" alt="Avatar">
+                  <div class="flip-card-front card-4">
+                    <!-- <img src="https://www.w3schools.com/howto/img_avatar.png" alt="Avatar"> -->
+                    <div id="citrusTop">
+                        <h1>MoneyCitrus Finance</h1>
+                    </div>
+                    <div class="bottomCard">
+                        <p>Javascript</p>
+                        <p>HTML</p>
+                        <p>CSS</p>
+                        <p>Python</p>
+                        <p>Django</p>
+                    </div>
                   </div>
-                  <div class="flip-card-back">
-                    <h1>John Doe</h1> 
-                    <p>Architect & Engineer</p> 
-                    <p>We love that guy</p>
-                    <button onclick="document.getElementById('id01').style.display='block'" class="w3-button w3-black">Open Animated Modal</button>
+                  <div class="flip-card-back card-back-background">
+                    <!-- <h1>John Doe</h1>  -->
+                    <div class="backCard">
+                      <p><span>Solving real world financial problems through data driven visualizations</span></p> 
+                      
+                      
+                    </div>
+                    <!-- <button onclick="document.getElementById('id01').style.display='block'" class="w3-button w3-black">Open Animated Modal</button> -->
+                    <button class="w3-button w3-black">Website</button>
+
                   </div>
                 </div>
               </div>
