mobile bug fix animate card fix

--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
       <div class="flex-container">
           <div id="section4">
               <div class="flip-card">
-                <div class="flip-card-inner">
+                <div id="card1" class="flip-card-inner">
                   <div class="flip-card-front card-4">
                     <!-- <img src="https://www.w3schools.com/howto/img_avatar.png" alt="Avatar"> -->
                     <div id="citrusTop">
