laggy bug test on real mobile device

--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
                   </div>
                 </div>
               </div>
-              <div class="flip-card">
+              <!-- <div class="flip-card">
                   <div class="flip-card-inner">
                     <div class="flip-card-front">
                       <img src="https://www.w3schools.com/howto/img_avatar.png" alt="Avatar">
@@ -170,7 +170,7 @@
         <p>Modal Footer</p>
       </footer>
     </div>
-  </div>
+  </div> -->
           </div>
       </div>
     </div>
