--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
   <body>
     <header id="section1_wrapper">
       <div id="section1">
-        <h1 id="h1_section1">Peter</h1>
-        <h2 id="h2_role">Front End Engineer</h2>
+        <h1 id="h1_section1">Peter Moung</h1>
+        <h2 id="h2_role">Software Engineer</h2>
         <button id="see_proj_btn" class="mdc-button mdc-button--raised inline-demo-button mdc-ripple-upgraded" style="--mdc-ripple-fg-size:56px; --mdc-ripple-fg-scale:1.97577; --mdc-ripple-fg-translate-start:14.5px, 5px; --mdc-ripple-fg-translate-end:18.9922px, -10px;">
       
             <span class="mdc-button__label"><!----><a id="section1_btn" href="#section4">See Projects</a><!----></span>
@@ -132,21 +132,21 @@
                 <div id="card1" class="flip-card-inner">
                   <div class="flip-card-front card-4">
                     <!-- <img src="https://www.w3schools.com/howto/img_avatar.png" alt="Avatar"> -->
-                    <div id="citrusTop">
-                        <h1>MoneyCitrus Finance</h1>
+                    <div id="fasttubeTop">
+                        <!-- <h1>MoneyCitrus Finance</h1> -->
                     </div>
                     <div class="bottomCard">
-                        <p>Javascript</p>
-                        <p>HTML</p>
-                        <p>CSS</p>
-                        <p>Python</p>
-                        <p>Django</p>
+                        <p>React</p>
+                        <p>NodeJS</p>
+                        <p>Material-UI</p>
+                        <p>Axios</p>
+                        <p>CSS</p> 
                     </div>
                   </div>
-                  <div class="flip-card-back card-back-background">
+                  <div class="flip-card-back card-back-background-2">
                     <!-- <h1>John Doe</h1>  -->
-                    <div class="backCard">
-                      <p><span>Solving real world financial problems through data driven visualizations potentially saving users tens of thousands of dollars</span></p> 
+                    <div class="backCard-2">
+                      <p><span>Serving millions of funny dog videos through a lightweight video streaming platform</span></p> 
                 
                     </div>
                     <button onclick="document.getElementById('id01').style.display='block'" class="w3-button w3-black">Demo</button>
