--- a/index.html
+++ b/index.html
@@ -189,9 +189,11 @@
         <h2>Modal Header</h2>
       </header>
       <div class="w3-container w3-content">
-        <img id="fasttube" src="./assets/fasttube.gif" />
-        <p>Some text..</p>
-        <p>Some text..</p>
+        <img id="fasttube" src="./assets/fasttube.gif" style="margin-right: 50px;" />
+        <div class="modalBottom">
+          <p>This lightweight site will make api request to youtube and serve back the payload in a fast React front end.</p>
+          <button id="secondCardBtn" class="w3-button w3-black"><a href="https://github.com/sudoxx2/fasttube">Source Code</a></button>
+        </div>
       </div>
       <!-- <footer class="w3-container w3-teal">
         <p>Modal Footer</p>
