improved navbar ux

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             </label>
           </div>
           
-          <div class="nav-links right">
+          <div id="nav_js_collapse" class="nav-links right">
             <a href="#section1_wrapper">Home</a>
             <a href="#section2_wrapper" >About Me</a>
             <a href="#section3_wrapper" >Programming Skills</a>
